Renamed android project to rogherdy-h

--- a/rogherdy-h/app/src/main/res/values/strings.xml
+++ b/rogherdy-h/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">uniwe-F</string>
+    <string name="app_name">Rogherdy-H</string>
 
 
     <string name="title_section1">Section 1</string>
