--- a/rogherdy-h/app/src/main/res/values/strings.xml
+++ b/rogherdy-h/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
 
     <string name="hello_world">Hello world!</string>
 
-    <string name="action_settings">v0.1.3038</string>
+    <string name="action_settings">v0.1.3041</string>
+    <string name="action_reload">Reload</string>
 </resources>
